# avtensor

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  avtensor.pyi  pyproject.toml
.github/workflows/: ci.yml  perf.yml  publish.yml  release.yml
benchmarks/: README.md  benchmark.py  ci_perf.py  make_charts.py
benchmarks/results/: 2026-07-08-xeon8481c-h100.json
src/: conversion.rs  lib.rs
src/decoder/: cuda.rs  io.rs  mod.rs
src/ffi/: mod.rs  tensor.rs
src/util/: ffmpeg.rs  gcs.rs  mel.rs  mod.rs  s3.rs  test_utils.rs
